# ft8web

./: .gitignore  README.md  config.example.json
backend/: CMakeLists.txt
backend/jt9d/: jt9d.cpp
backend/scripts/: pota_api.py
backend/src/: AudioEngine.cpp  AudioEngine.hpp  Config.cpp  Config.hpp  DecodeEngine.cpp  DecodeEngine.hpp  DecodeModes.cpp  FreqPlan.cpp  FreqPlan.hpp  GpsClient.cpp  GpsClient.hpp  HomeDir.hpp  LogStore.cpp  LogStore.hpp  PotaClient.cpp  PotaClient.hpp  PskReporter.cpp  PskReporter.hpp  QrzLookup.cpp  QrzLookup.hpp  QsoEngine.cpp  QsoEngine.hpp  RigClient.cpp  RigClient.hpp  TxEngine.cpp  TxEngine.hpp  Uploader.cpp  Uploader.hpp  Waterfall.cpp  Waterfall.hpp  WorkedLog.cpp  WorkedLog.hpp  freq_plan_data.hpp  main.cpp
docs/: INSTALL.md
frontend/ft8web-ui/: angular.json  package-lock.json  package.json  proxy.conf.json
frontend/ft8web-ui/public/: cities.json  map-extras.json
frontend/ft8web-ui/src/: index.html  main.ts  styles.scss
frontend/ft8web-ui/src/app/: api.service.ts  app.component.ts  app.config.ts  audio-control.component.ts  chime.service.ts  config.service.ts  cycle.component.ts  decode-store.ts  decodes.component.ts  health.component.ts  logs.component.ts  maidenhead.ts  maps.component.ts  models.ts  pota.component.ts  qso.service.ts  radio.service.ts  radios-config.component.ts  rig-control.component.ts  station-config.component.ts  tx-messages.component.ts  waterfall.component.ts  ws.service.ts
scripts/: build.sh  hamlib_update.sh  install.sh
tools/: gen_cities.py  gen_freq_plan.py  gen_map_extras.py
tools/ft2/: build_ft2sim.sh  ft2sim.f90
